<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dlgbg"
    >

    <LinearLayout 
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/msgbox1"
        >
        <TextView 
            android:text="@string/ui_logtitle"
             android:textColor="@color/textwhite"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"  
        android:textSize="18dp"      
            />
        
        <LinearLayout 
             android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
            >
           <TextView 
                android:textColor="@color/textwhite"
            android:text="@string/ui_logusername"
            android:layout_width="120dp"
        android:layout_height="wrap_content"       
        android:textSize="22dp" 
            />           
           <EditText   
               android:id="@+id/loging_username"
                android:textSize="22dp" 
                  android:layout_width="260dp"
               android:layout_height="wrap_content"   
               android:inputType="textEmailAddress"  
               android:hint="alialicoo@email.com"   />
        </LinearLayout>
        
          <LinearLayout 
               android:layout_marginTop="6dp"
             android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            >
             <TextView 
                  android:textColor="@color/textwhite"
            android:text="@string/ui_logpasswords"
            android:layout_width="120dp"
        android:layout_height="wrap_content"   
         android:textSize="22dp"               
            />
              <EditText   
                  android:id="@+id/loging_passwords"
                android:textSize="22dp" 
                  android:layout_width="260dp"
               android:layout_height="wrap_content"   
               android:inputType="textPassword"    />
        </LinearLayout>
        
          <LinearLayout 
               android:layout_marginTop="6dp"
             android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
            >
            <Button 
                android:id="@+id/loging_ok"
                android:text="@string/ui_loginbnt"
                  android:layout_width="180dp"
        android:layout_height="wrap_content"
          android:background="@drawable/dlg_botton_background"
                />
            
             <Button 
                 android:id="@+id/loging_cancel"
                android:text="@string/ui_logcancelbnt"
                  android:layout_width="180dp"
        android:layout_height="wrap_content"
          android:background="@drawable/dlg_botton_background"
                />
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>