<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menutb"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/menub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/menubg"
        android:orientation="vertical" >

        <!--
        用户注册
        <LinearLayout 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
              <ImageView
            android:id="@+id/menu1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/icon" />            
        </LinearLayout>
        -->

        <LinearLayout
            android:id="@+id/menu_ll_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="6dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_menu_covered"
                android:textColor="@color/textblack"
                android:textSize="18dp" />

            <CheckBox
                android:id="@+id/cb_autocovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_ll_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="6dp" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/camera2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/ui_menu_camera"
                android:textColor="@color/textblack"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_ll_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="6dp" >

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/camera1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/ui_menu_screenshot"
                android:textColor="@color/textblack"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>